# poclmembench

./: .gitignore  CMakeLists.txt  README.md
include/: OclEngine.hpp  ProgramOptions.hpp  Version.h.in
src/: OclEngine.cpp  ProgramOptions.cpp  kernels.cl  main.cpp
test/: CMakeLists.txt  ProgramOptions_test.cpp
